[gd_scene load_steps=4 format=3 uid="uid://kjhkh735xw0n"]

[ext_resource type="PackedScene" uid="uid://22jqjjb656al" path="res://ZoomControls.tscn" id="1_cnxeh"]
[ext_resource type="Script" path="res://gdscripts/GenericStreamManager.gd" id="1_tubob"]
[ext_resource type="Script" path="res://gdscripts/StreamFG.gd" id="2_a00q5"]

[node name="StreamManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -152.0
offset_bottom = -548.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tubob")
metadata/StreamBGColor = Color(0.811765, 1, 1, 1)
metadata/StreamDisplayType = "Rolling"
metadata/StreamFGColor = Color(0, 0, 0, 1)
metadata/Reflect = false
metadata/StreamDataType = "Raw"
metadata/TimeWindowSeconds = 1.0

[node name="StreamBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StreamFG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_a00q5")

[node name="StreamBar" type="Control" parent="."]
anchors_preset = 0
offset_left = 497.0
offset_right = 503.0
offset_bottom = 100.0

[node name="StreamBarUpper" type="ColorRect" parent="StreamBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 14.0
grow_horizontal = 2
color = Color(0.836709, 0.541857, 0.367578, 1)

[node name="StreamBarLower" type="ColorRect" parent="StreamBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.835294, 0.541176, 0.368627, 1)

[node name="ScrollBar" type="HScrollBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 0

[node name="Control" parent="." instance=ExtResource("1_cnxeh")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -25.0
offset_right = 10.0
offset_bottom = -25.0
grow_horizontal = 0

[node name="MarkerLine" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1.0
offset_bottom = 100.0
color = Color(0, 0, 0, 1)

[node name="StreamHitBox" type="ColorRect" parent="."]
z_index = 3
layout_mode = 0
offset_right = 1000.0
offset_bottom = 100.0
color = Color(1, 1, 1, 0)

[connection signal="scrolling" from="ScrollBar" to="." method="_on_scroll_bar_scrolling"]
[connection signal="gui_input" from="StreamHitBox" to="." method="_on_stream_hit_box_gui_input"]
[connection signal="mouse_exited" from="StreamHitBox" to="." method="_on_stream_hit_box_mouse_exited"]
